--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"clsx": "^2.1.1",
 		"ecctrl": "^1.0.92",
 		"gsap": "^3.13.0",
+		"howler": "^2.2.4",
 		"jotai": "^2.12.2",
 		"leva": "^0.10.0",
 		"lucide-react": "^0.486.0",
@@ -39,6 +40,7 @@
 		"troika-three-text": "^0.52.4"
 	},
 	"devDependencies": {
-		"@iconify/react": "^5.2.1"
+		"@iconify/react": "^5.2.1",
+		"@types/howler": "^2.2.12"
 	}
 }
